@@ -3973,7 +3973,7 @@ public class TableResourceTest extends EntityResourceTest<Table, CreateTable> {
     List<Column> columns = new ArrayList<>();
 
     columns.add(
-        getColumn("user_id", INT, null)
+        getColumn("user_id", INT, USER_ADDRESS_TAG_LABEL)
             .withOrdinalPosition(1)
             .withDescription("Primary key for user identification"));
     columns.add(
@@ -4069,13 +4069,75 @@ public class TableResourceTest extends EntityResourceTest<Table, CreateTable> {
     assertEquals(0, response.getData().size());
     assertEquals(0, response.getPaging().getTotal());
 
+    // Create a custom metric for testing
+    CreateCustomMetric customMetric = new CreateCustomMetric();
+    customMetric
+        .withName("TestMetric")
+        .withDescription("Test custom metric")
+        .withColumnName("user_id")
+        .withExpression("SELECT COUNT(*) FROM test");
+    putCustomMetric(table.getId(), customMetric, ADMIN_AUTH_HEADERS);
+
+    // Test search with tags field
+    target =
+        getResource("tables/" + table.getId() + "/columns/search")
+            .queryParam("q", "user_id")
+            .queryParam("fields", "tags");
+    response = TestUtils.get(target, TableResource.TableColumnList.class, ADMIN_AUTH_HEADERS);
+    assertEquals(1, response.getData().size());
+    Column column = response.getData().getFirst();
+    assertEquals("user_id", column.getName());
+    assertNotNull(column.getTags(), "Column tags should not be null");
+    assertFalse(column.getTags().isEmpty(), "Column tags should not be empty");
+    assertEquals(1, column.getTags().size(), "Column should have exactly 1 tag");
+    TagLabel expectedTag = USER_ADDRESS_TAG_LABEL;
+    TagLabel actualTag = column.getTags().getFirst();
+    assertEquals(expectedTag.getTagFQN(), actualTag.getTagFQN(), "Tag FQN should match");
+
+    // Test search with customMetrics field
+    target =
+        getResource("tables/" + table.getId() + "/columns/search")
+            .queryParam("q", "user_id")
+            .queryParam("fields", "customMetrics");
+    response = TestUtils.get(target, TableResource.TableColumnList.class, ADMIN_AUTH_HEADERS);
+    assertEquals(1, response.getData().size());
+    column = response.getData().getFirst();
+    assertEquals("user_id", column.getName());
+    assertNotNull(column.getCustomMetrics(), "Column custom metrics should not be null");
+    assertFalse(column.getCustomMetrics().isEmpty(), "Column custom metrics should not be empty");
+    assertEquals(1, column.getCustomMetrics().size(), "Column should have exactly 1 custom metric");
+    CustomMetric actualMetric = column.getCustomMetrics().getFirst();
+    assertEquals(customMetric.getName(), actualMetric.getName(), "Custom metric name should match");
+
+    // Test search with both fields together
     target =
         getResource("tables/" + table.getId() + "/columns/search")
             .queryParam("q", "user_id")
             .queryParam("fields", "tags,customMetrics");
     response = TestUtils.get(target, TableResource.TableColumnList.class, ADMIN_AUTH_HEADERS);
     assertEquals(1, response.getData().size());
-    assertNotNull(response.getData().get(0)); // Should include requested fields
+    column = response.getData().getFirst();
+    assertEquals("user_id", column.getName());
+    // Verify tags
+    assertNotNull(column.getTags(), "Column tags should not be null");
+    assertFalse(column.getTags().isEmpty(), "Column tags should not be empty");
+    assertEquals(1, column.getTags().size(), "Column should have exactly 1 tag");
+    actualTag = column.getTags().getFirst();
+    assertEquals(expectedTag.getTagFQN(), actualTag.getTagFQN(), "Tag FQN should match");
+    // Verify custom metrics
+    assertNotNull(column.getCustomMetrics(), "Column custom metrics should not be null");
+    assertFalse(column.getCustomMetrics().isEmpty(), "Column custom metrics should not be empty");
+    assertEquals(1, column.getCustomMetrics().size(), "Column should have exactly 1 custom metric");
+    actualMetric = column.getCustomMetrics().getFirst();
+    assertEquals(customMetric.getName(), actualMetric.getName(), "Custom metric name should match");
+
+    target =
+        getResource("tables/" + table.getId() + "/columns/search")
+            .queryParam("q", "user_id")
+            .queryParam("fields", "tags,customMetrics");
+    response = TestUtils.get(target, TableResource.TableColumnList.class, ADMIN_AUTH_HEADERS);
+    assertEquals(1, response.getData().size());
+    assertNotNull(response.getData().getFirst()); // Should include requested fields
 
     final WebTarget invalidTarget =
         getResource("tables/" + table.getId() + "/columns/search")
@@ -5750,6 +5812,116 @@ public class TableResourceTest extends EntityResourceTest<Table, CreateTable> {
                 e ->
                     e.getEntity().getId().equals(tableB.getId())
                         && e.getRelatedEntity().getId().equals(tableC.getId())));
+  }
+
+  @Test
+  @Order(2)
+  void test_paginationFetchesTagsAtBothEntityAndFieldLevels(TestInfo test) throws IOException {
+    TagLabel tableTagLabel = USER_ADDRESS_TAG_LABEL;
+    TagLabel columnTagLabel = GLOSSARY1_TERM1_LABEL;
+
+    List<Table> createdTables = new ArrayList<>();
+    for (int i = 0; i < 5; i++) {
+      List<Column> columns =
+          Arrays.asList(
+              getColumn("col1_" + i, BIGINT, null).withTags(List.of(columnTagLabel)),
+              getColumn("col2_" + i, VARCHAR, null).withDataLength(50));
+
+      CreateTable createTable =
+          createRequest(test.getDisplayName() + "_pagination_" + i)
+              .withColumns(columns)
+              .withTags(List.of(tableTagLabel))
+              .withTableConstraints(null);
+
+      Table table = createEntity(createTable, ADMIN_AUTH_HEADERS);
+      createdTables.add(table);
+    }
+
+    // Test pagination with fields=tags (should fetch table-level tags only)
+    WebTarget target =
+        getResource("tables")
+            .queryParam("fields", "tags")
+            .queryParam("limit", "50")
+            .queryParam(
+                "databaseSchema",
+                DATABASE_SCHEMA.getFullyQualifiedName()); // Filter by schema to get our tables
+
+    TableList tableList = TestUtils.get(target, TableList.class, ADMIN_AUTH_HEADERS);
+    assertNotNull(tableList.getData());
+
+    List<Table> ourTables =
+        tableList.getData().stream()
+            .filter(t -> createdTables.stream().anyMatch(ct -> ct.getId().equals(t.getId())))
+            .collect(Collectors.toList());
+
+    assertFalse(
+        ourTables.isEmpty(), "Should find at least one of our created tables in pagination");
+
+    for (Table table : ourTables) {
+      assertNotNull(
+          table.getTags(), "Table-level tags should not be null when fields=tags in pagination");
+      assertEquals(1, table.getTags().size(), "Should have exactly one table-level tag");
+      assertEquals(tableTagLabel.getTagFQN(), table.getTags().get(0).getTagFQN());
+
+      if (table.getColumns() != null) {
+        for (Column col : table.getColumns()) {
+          assertTrue(
+              col.getTags() == null || col.getTags().isEmpty(),
+              "Column tags should not be populated when only fields=tags is specified in pagination");
+        }
+      }
+    }
+
+    target =
+        getResource("tables")
+            .queryParam("fields", "columns,tags")
+            .queryParam("limit", "50")
+            .queryParam(
+                "databaseSchema",
+                DATABASE_SCHEMA.getFullyQualifiedName()); // Filter by schema to get our tables
+
+    tableList = TestUtils.get(target, TableList.class, ADMIN_AUTH_HEADERS);
+    assertNotNull(tableList.getData());
+
+    ourTables =
+        tableList.getData().stream()
+            .filter(t -> createdTables.stream().anyMatch(ct -> ct.getId().equals(t.getId())))
+            .collect(Collectors.toList());
+
+    assertFalse(
+        ourTables.isEmpty(), "Should find at least one of our created tables in pagination");
+
+    for (Table table : ourTables) {
+      assertNotNull(
+          table.getTags(), "Table-level tags should not be null in pagination with columns,tags");
+      assertEquals(1, table.getTags().size(), "Should have exactly one table-level tag");
+      assertEquals(tableTagLabel.getTagFQN(), table.getTags().get(0).getTagFQN());
+
+      assertNotNull(table.getColumns(), "Columns should not be null when fields includes columns");
+      Column col1 =
+          table.getColumns().stream()
+              .filter(c -> c.getName().startsWith("col1_"))
+              .findFirst()
+              .orElseThrow(() -> new AssertionError("Should find col1 column"));
+
+      assertNotNull(
+          col1.getTags(), "Column tags should not be null when fields=columns,tags in pagination");
+      assertTrue(!col1.getTags().isEmpty(), "Column should have at least one tag");
+      // Check that our expected tag is present
+      boolean hasExpectedTag =
+          col1.getTags().stream()
+              .anyMatch(tag -> tag.getTagFQN().equals(columnTagLabel.getTagFQN()));
+      assertTrue(
+          hasExpectedTag, "Column should have the expected tag: " + columnTagLabel.getTagFQN());
+
+      Column col2 =
+          table.getColumns().stream()
+              .filter(c -> c.getName().startsWith("col2_"))
+              .findFirst()
+              .orElseThrow(() -> new AssertionError("Should find col2 column"));
+
+      assertTrue(col2.getTags() == null || col2.getTags().isEmpty(), "col2 should not have tags");
+    }
   }
 
   @Test
